# GameCoach-AI

./: .env.example  .gitignore  INTERVIEW_QA.md  PROJECT_PLAN.md  README.md  RESUME.md  SPEC.md  TESTING.md  langgraph.json  pyproject.toml
data/guides/: character_guide_alpha.md  character_guide_bravo.md  general_climbing_methodology.md  hero_direnjie_guide.md  hero_sunshangxiang_guide.md  marksman_teamfight_guide.md  meta_climbing_guide.md  patch_meta_guide.md  rank_climbing_guide.md  teamfight_positioning_guide.md
data/memory/: player_001.json
data/mock/: heroes.json  matches.json  patch_meta.json
data/test_data/: README.md  characters.json  items.json  matches.json  patch_meta.json  player_memory.json
src/gamecoach/: __init__.py  api.py  main.py
src/gamecoach/agents/: __init__.py  planner.py  response.py  strategy.py
src/gamecoach/config/: __init__.py  llm.py  settings.py
src/gamecoach/evaluation/: __init__.py  metrics.py
src/gamecoach/graph/: __init__.py  nodes.py  router.py  state.py  workflow.py
src/gamecoach/memory/: __init__.py  store.py
src/gamecoach/rag/: __init__.py  indexer.py  loader.py  retriever.py
src/gamecoach/tools/: __init__.py  guide_rag.py  hero_database.py  items.py  match_history.py  patch_meta.py
tests/: test_llm_config.py  test_tools.py  test_workflow.py
